# VRChat-lyrics-display

./: .gitignore  AGENTS.md  LICENSE  README.md  compile_out.txt  gsmtc_client.py  hmd_battery.py  lyrics.py  main.py  moekoe_client.py  requirements.txt  start.bat  translator.py  ui.py  voicemeeter_ctrl.py  vrc_osc.py  页面布局.txt
NovaRenderer/: CMakeLists.txt  build.bat  build_now.bat  build_stderr2.txt  build_stderr5.txt  build_stderr6.txt  build_stderr7.txt  build_stderr8.txt  build_stdout.txt  build_stdout2.txt  build_stdout3.txt  build_stdout4.txt  build_stdout5.txt  build_stdout7.txt  build_stdout8.txt  build_stdout9.txt  run_build.bat  test_build.bat
NovaRenderer/docs/: API_REFERENCE.md  TUTORIAL.md
NovaRenderer/examples/: liquid_glass.cpp  main.cpp
NovaRenderer/include/Nova/: AsyncCompute.h  Command.h  Descriptor.h  Font.h  Input.h  Instancing.h  LiquidGlass.h  Material.h  ParticleSystem.h  Pipeline.h  PostProcess.h  Profiler.h  RenderGraph.h  Renderer.h  Scene.h  Shader.h  ShaderHotReload.h  Texture.h  TextureStreaming.h  ThreadPool.h  Types.h  VulkanBackend.h  Window.h
NovaRenderer/shaders/: basic.vert  gaussian_blur.comp  msdf_text.frag  particle_update.comp  rounded_rect.frag  solid_color.frag  texture.frag
NovaRenderer/src/: AsyncCompute.cpp  Command.cpp  Descriptor.cpp  Font.cpp  Input.cpp  Instancing.cpp  LiquidGlass.cpp  Material.cpp  ParticleSystem.cpp  Pipeline.cpp  PostProcess.cpp  Profiler.cpp  RenderGraph.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  ShaderHotReload.cpp  Texture.cpp  TextureStreaming.cpp  ThreadPool.cpp  VulkanBackend.cpp  Window.cpp
cpp/: .gitignore  AGENTS.md  CHANGELOG.txt  CMakeLists.txt  DRAFT_CHANGES.md  backup.bat  build.bat  build_err_result.txt  build_gui.bat  build_log.txt  build_result.txt  compile.bat  compile_gui_err.txt  compile_gui_out.txt  compile_out.txt  modifications.txt  run_build.bat  temp_build.bat  test_err.txt  vcpkg.json
cpp/backup/20260310_020127/: backup_info.txt
cpp/backup/20260310_023506/: backup_info.txt
cpp/gui/: App.cpp  App.h  App.idl  MainWindow.cpp  MainWindow.h  MainWindow.idl  MoeKoeGUI.vcxproj  README.md  add_anim.ps1  compile_glass_lite.bat  compile_gui.bat  compile_gui_modular.bat  compile_mica_test.bat  compile_modular.bat  compile_output.txt  compile_output_new.txt  compile_test.bat  glass_window.cpp  glass_window.h  glass_window_lite.cpp  lightweight_glass.cpp  main_gui.cpp  moekoe_ws.cpp  moekoe_ws.h  netease_ws.cpp  netease_ws.h  nova_advanced.cpp  nova_advanced.h  nova_compute_shaders.h  packages.config  pch.cpp  pch.h  render_pipeline.cpp  render_pipeline.h  render_pipeline_demo.cpp  smtc_client.cpp  smtc_client.h  test_unit.cpp  test_window.cpp  vulkan_renderer.cpp  (+2 more)
cpp/gui/common/: config.h  config_manager.cpp  config_manager.h  logger.cpp  logger.h  string_utils.cpp  string_utils.h  theme.cpp  theme.h  types.h  utils.cpp  utils.h
cpp/gui/core/: hardware_detect.cpp  hardware_detect.h  lyrics_search.cpp  lyrics_search.h  osc_manager.cpp  osc_manager.h  perf_monitor.cpp  perf_monitor.h  update_checker.cpp  update_checker.h
cpp/gui/ui/: custom_dialog.cpp  custom_dialog.h  draw_helpers.cpp  draw_helpers.h  overlay_window.h  window_utils.cpp  window_utils.h
cpp/include/: config.h  gsmtc_client.h  lyrics_fetcher.h  moekoe_client.h  music_source.h  netease_client.h  osc_sender.h  types.h  utils.h
cpp/src/: config.cpp  gsmtc_client.cpp  lyrics_fetcher.cpp  main.cpp  moekoe_client.cpp  music_source.cpp  netease_client.cpp  osc_sender.cpp  utils.cpp
release/v0.2/: compile_gui.bat
